--- a/static/css/outside.css
+++ b/static/css/outside.css
@@ -66,8 +66,8 @@ h1 {
   font-weight: 600;
 }
 
-.card-content {
-  padding: 12px;
+.outside-card-content {
+  padding: 14px;
   flex-grow: 1;
   min-height: 80px;
   max-height: 120px;
@@ -80,11 +80,11 @@ h1 {
   margin-bottom: 8px;
 }
 
-.card-content::-webkit-scrollbar {
+.outside-card-content::-webkit-scrollbar {
   display: none;
 }
 
-.card-content p {
+.outside-card-content p {
   margin: 0;
   color: #666;
   line-height: 1.5;
@@ -136,7 +136,7 @@ h1 {
 }
 
 .url-link {
-  padding: 8px 12px;
+  padding: 5px 12px;
   background-color: #f0f0f0;
   color: black;
   text-decoration: none;
